# findmyorder

./: .gitignore  CHANGELOG.md  Makefile  README.md  findmyorder.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/: .pre-commit-config.yaml  .readthedocs.yaml  renovate.json  semantic.yml
.github/workflows/: pr_check.yml  ☁️Deploy.yml  ☁️deploy.yml  ⛙automerge.yml  ✨Flow.yml  🐍Build.yml  🐍build.yml  🐍build_dev.yml  🐳Docker.yml  👷Flow.yml  👷‍♂️Flow.yml  🦎build_dev.yml  🧪test.yml  🧪test_dev.yml
.registry/: Dockerfile
.requirements/: requirements.txt
_modules/: index.html
_modules/findmyorder/: main.html
_sources/: findmyorder.rst.txt
docs/: 01_start.rst  02_config.rst  03_module.rst  conf.py  index.rst  modules.rst  requirements.txt
examples/: Dockerfile  config.py  example.py  requirements.txt  settings.toml  test.py
examples/.requirements/: requirements.txt
findmyorder/: __init__.py  config.py  core.toml  default_settings.toml  main.py  settings.toml
findmyorder/handler/: __init__.py  _client.py  basic.py  handler.py  simple.py  standard.py
tests/: conftest.py  test_exception.py  test_unit.py  test_unit_basic.py  test_unit_exception  test_unit_exception.py  test_unit_format_basic.py  test_unit_format_future.py  unit_test.py  unit_tests.py
tests/examples/: Dockerfile  example.py  requirements.txt  test.py
