[tool.poetry]
name = "findmyorder"
version = "1.1.5"
description = "A python package to identify and parse order for trade execution."
authors = ["mraniki <8766259+mraniki@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
keywords = ["trading", "order", "trade","buy","sell"]


[tool.poetry.urls]
"Changelog" =  "https://github.com/mraniki/findmyorder/blob/dev/CHANGELOG.rst"
"Support" =  "https://github.com/mraniki/findmyorder/discussions"
"Issues" =  "https://github.com/mraniki/findmyorder/issues"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dynaconf = ">=3.1.12"
pyparsing = ">=3.0.9"

[tool.poetry.dev-dependencies]
python-semantic-release = "*"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = [
  "Test*",
  "*Test"
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
pythonpath = [
  "."
]
addopts = "--ignore-glob=example_*"

[tool.semantic_release]
version_variable = ["pyproject.toml:version","findmyorder/__init__.py:__version__"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
